--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-908.5KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-611.0KB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-6.20MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-605.5KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-4.39MB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65022, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
+  - {name: 🇭🇰 香港-188.3KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.41MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.84MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.57MB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65068, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
   - {name: 波兰-804.0KB/s(Youtube:不良林), server: 217.30.10.67, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
   - {name: 波兰-521.1KB/s(Youtube:不良林), server: 217.30.10.67, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
   - {name: 波兰-451.0KB/s(Youtube:不良林), server: 217.30.10.67, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-908.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-605.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-188.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
       - 波兰-804.0KB/s(Youtube:不良林)
       - 波兰-521.1KB/s(Youtube:不良林)
       - 波兰-451.0KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-908.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-605.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-188.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
       - 波兰-804.0KB/s(Youtube:不良林)
       - 波兰-521.1KB/s(Youtube:不良林)
       - 波兰-451.0KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-908.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-605.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-188.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
       - 波兰-804.0KB/s(Youtube:不良林)
       - 波兰-521.1KB/s(Youtube:不良林)
       - 波兰-451.0KB/s(Youtube:不良林)
@@ -66,17 +66,19 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-188.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.84MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-908.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-605.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-188.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
       - 波兰-804.0KB/s(Youtube:不良林)
       - 波兰-521.1KB/s(Youtube:不良林)
       - 波兰-451.0KB/s(Youtube:不良林)
@@ -87,11 +89,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-908.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-605.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-188.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
       - 波兰-804.0KB/s(Youtube:不良林)
       - 波兰-521.1KB/s(Youtube:不良林)
       - 波兰-451.0KB/s(Youtube:不良林)
@@ -103,11 +105,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-908.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-605.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-188.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
       - 波兰-804.0KB/s(Youtube:不良林)
       - 波兰-521.1KB/s(Youtube:不良林)
       - 波兰-451.0KB/s(Youtube:不良林)
@@ -128,11 +130,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-908.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-605.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-188.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
       - 波兰-804.0KB/s(Youtube:不良林)
       - 波兰-521.1KB/s(Youtube:不良林)
       - 波兰-451.0KB/s(Youtube:不良林)
