--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.39MB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65022, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
-  - {name: 🇭🇰 香港-188.3KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.41MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-2.84MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.57MB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65068, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 波兰-804.0KB/s(Youtube:不良林), server: 217.30.10.67, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
-  - {name: 波兰-521.1KB/s(Youtube:不良林), server: 217.30.10.67, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 塞浦路斯-238.1KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇨🇳 中国-1.75MB/s(Youtube:不良林), server: 36.134.156.5, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-245.3KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇳🇱 荷兰-823.8KB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
+  - {name: 波兰-943.0KB/s(Youtube:不良林), server: 217.30.10.67, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 波兰-911.6KB/s(Youtube:不良林), server: 217.30.10.67, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
   - {name: 波兰-451.0KB/s(Youtube:不良林), server: 217.30.10.67, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
-  - {name: 🇸🇬 新加坡-1008.4KB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-1.78MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-188.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 波兰-804.0KB/s(Youtube:不良林)
-      - 波兰-521.1KB/s(Youtube:不良林)
+      - 塞浦路斯-238.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-823.8KB/s(Youtube:不良林)
+      - 波兰-943.0KB/s(Youtube:不良林)
+      - 波兰-911.6KB/s(Youtube:不良林)
       - 波兰-451.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1008.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-188.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 波兰-804.0KB/s(Youtube:不良林)
-      - 波兰-521.1KB/s(Youtube:不良林)
+      - 塞浦路斯-238.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-823.8KB/s(Youtube:不良林)
+      - 波兰-943.0KB/s(Youtube:不良林)
+      - 波兰-911.6KB/s(Youtube:不良林)
       - 波兰-451.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1008.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,52 +52,50 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-188.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 波兰-804.0KB/s(Youtube:不良林)
-      - 波兰-521.1KB/s(Youtube:不良林)
+      - 塞浦路斯-238.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-823.8KB/s(Youtube:不良林)
+      - 波兰-943.0KB/s(Youtube:不良林)
+      - 波兰-911.6KB/s(Youtube:不良林)
       - 波兰-451.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1008.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-188.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.84MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-188.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 波兰-804.0KB/s(Youtube:不良林)
-      - 波兰-521.1KB/s(Youtube:不良林)
+      - 塞浦路斯-238.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-823.8KB/s(Youtube:不良林)
+      - 波兰-943.0KB/s(Youtube:不良林)
+      - 波兰-911.6KB/s(Youtube:不良林)
       - 波兰-451.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1008.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-188.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 波兰-804.0KB/s(Youtube:不良林)
-      - 波兰-521.1KB/s(Youtube:不良林)
+      - 塞浦路斯-238.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-823.8KB/s(Youtube:不良林)
+      - 波兰-943.0KB/s(Youtube:不良林)
+      - 波兰-911.6KB/s(Youtube:不良林)
       - 波兰-451.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1008.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -105,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-188.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 波兰-804.0KB/s(Youtube:不良林)
-      - 波兰-521.1KB/s(Youtube:不良林)
+      - 塞浦路斯-238.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-823.8KB/s(Youtube:不良林)
+      - 波兰-943.0KB/s(Youtube:不良林)
+      - 波兰-911.6KB/s(Youtube:不良林)
       - 波兰-451.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1008.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -130,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-188.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 波兰-804.0KB/s(Youtube:不良林)
-      - 波兰-521.1KB/s(Youtube:不良林)
+      - 塞浦路斯-238.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-823.8KB/s(Youtube:不良林)
+      - 波兰-943.0KB/s(Youtube:不良林)
+      - 波兰-911.6KB/s(Youtube:不良林)
       - 波兰-451.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1008.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
