--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.57MB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65068, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 塞浦路斯-238.1KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
-  - {name: 🇨🇳 中国-1.75MB/s(Youtube:不良林), server: 36.134.156.5, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-245.3KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇳🇱 荷兰-823.8KB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
-  - {name: 波兰-943.0KB/s(Youtube:不良林), server: 217.30.10.67, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇫🇷 法国-1.18MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-861.5KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.99MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇯🇵 日本-466.5KB/s(Youtube:不良林), server: 89.31.126.31, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 波兰-911.6KB/s(Youtube:不良林), server: 217.30.10.67, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 波兰-451.0KB/s(Youtube:不良林), server: 217.30.10.67, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 波兰-913.8KB/s(Youtube:不良林), server: 217.30.10.67, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
   - {name: 🇸🇬 新加坡-1.78MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-579.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-720.0KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 塞浦路斯-238.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-823.8KB/s(Youtube:不良林)
-      - 波兰-943.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-861.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-466.5KB/s(Youtube:不良林)
       - 波兰-911.6KB/s(Youtube:不良林)
-      - 波兰-451.0KB/s(Youtube:不良林)
+      - 波兰-913.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-579.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-720.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 塞浦路斯-238.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-823.8KB/s(Youtube:不良林)
-      - 波兰-943.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-861.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-466.5KB/s(Youtube:不良林)
       - 波兰-911.6KB/s(Youtube:不良林)
-      - 波兰-451.0KB/s(Youtube:不良林)
+      - 波兰-913.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-579.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-720.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 塞浦路斯-238.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-823.8KB/s(Youtube:不良林)
-      - 波兰-943.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-861.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-466.5KB/s(Youtube:不良林)
       - 波兰-911.6KB/s(Youtube:不良林)
-      - 波兰-451.0KB/s(Youtube:不良林)
+      - 波兰-913.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-579.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-720.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 塞浦路斯-238.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-823.8KB/s(Youtube:不良林)
-      - 波兰-943.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-861.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-466.5KB/s(Youtube:不良林)
       - 波兰-911.6KB/s(Youtube:不良林)
-      - 波兰-451.0KB/s(Youtube:不良林)
+      - 波兰-913.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-579.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-720.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 塞浦路斯-238.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-823.8KB/s(Youtube:不良林)
-      - 波兰-943.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-861.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-466.5KB/s(Youtube:不良林)
       - 波兰-911.6KB/s(Youtube:不良林)
-      - 波兰-451.0KB/s(Youtube:不良林)
+      - 波兰-913.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-579.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-720.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 塞浦路斯-238.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-823.8KB/s(Youtube:不良林)
-      - 波兰-943.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-861.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-466.5KB/s(Youtube:不良林)
       - 波兰-911.6KB/s(Youtube:不良林)
-      - 波兰-451.0KB/s(Youtube:不良林)
+      - 波兰-913.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-579.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-720.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 塞浦路斯-238.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-823.8KB/s(Youtube:不良林)
-      - 波兰-943.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-861.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-466.5KB/s(Youtube:不良林)
       - 波兰-911.6KB/s(Youtube:不良林)
-      - 波兰-451.0KB/s(Youtube:不良林)
+      - 波兰-913.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-579.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-720.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
