--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.18MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-861.5KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-2.99MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇯🇵 日本-466.5KB/s(Youtube:不良林), server: 89.31.126.31, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 波兰-911.6KB/s(Youtube:不良林), server: 217.30.10.67, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 波兰-913.8KB/s(Youtube:不良林), server: 217.30.10.67, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
-  - {name: 🇸🇬 新加坡-1.78MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-579.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-720.0KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-685.0KB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.63MB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇭🇰 香港-4.20MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-3.37MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.14MB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇺🇸 美国-2.76MB/s(Youtube:不良林), server: 38.107.226.132, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: 38.107.226.132, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-2.69MB/s(Youtube:不良林), server: 38.107.226.132, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: 38.107.226.132, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: 38.107.226.132, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-861.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-466.5KB/s(Youtube:不良林)
-      - 波兰-911.6KB/s(Youtube:不良林)
-      - 波兰-913.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-579.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-720.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-685.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-861.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-466.5KB/s(Youtube:不良林)
-      - 波兰-911.6KB/s(Youtube:不良林)
-      - 波兰-913.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-579.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-720.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-685.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-861.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-466.5KB/s(Youtube:不良林)
-      - 波兰-911.6KB/s(Youtube:不良林)
-      - 波兰-913.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-579.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-720.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-685.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.37MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-861.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-466.5KB/s(Youtube:不良林)
-      - 波兰-911.6KB/s(Youtube:不良林)
-      - 波兰-913.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-579.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-720.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-685.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-861.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-466.5KB/s(Youtube:不良林)
-      - 波兰-911.6KB/s(Youtube:不良林)
-      - 波兰-913.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-579.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-720.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-685.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-861.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-466.5KB/s(Youtube:不良林)
-      - 波兰-911.6KB/s(Youtube:不良林)
-      - 波兰-913.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-579.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-720.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-685.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-861.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-466.5KB/s(Youtube:不良林)
-      - 波兰-911.6KB/s(Youtube:不良林)
-      - 波兰-913.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-579.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-720.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-685.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
